feat: setup render iac and dynamic cors